Pequenos ajustes de semantica

--- a/exercicios-javascript/javascript-aula10/exercicio-1.html
+++ b/exercicios-javascript/javascript-aula10/exercicio-1.html
@@ -40,8 +40,7 @@ for (let i = 0; i &lt; filiais.length; i++) {
  console.log(&quot;Gerente: &quot; + filiais[i].gerente);
  console.log(&quot;------------------------------&quot;);
 }
-</pre
-				>
+</pre>
 				<p>
 					Agora mostre como usar map para obter um novo array onde cada elemento
 					&eacute; a cidade de cada filial: [&quot;S&atilde;o Paulo&quot;, &quot;Rio
@@ -53,7 +52,7 @@ for (let i = 0; i &lt; filiais.length; i++) {
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
+		<script src="./js/exercicio-1.js"></script>
+		<script src="/main.js"></script>
 	</body>
-	<script src="./js/exercicio-1.js"></script>
-	<script src="/main.js"></script>
 </html>
