--- a/exercicios-javascript/javascript-aula10/exercicio-3.html
+++ b/exercicios-javascript/javascript-aula10/exercicio-3.html
@@ -35,9 +35,7 @@
 					Encontramos no site Kaggle uma base de dados sobre filmes, contendo
 					informação sobre ~5000 filmes (título, gêneros, ano, orçamento, etc.):
 					<a
-						href="https://www.kaggle.com/datasets/carolzhangdc/imdb-5000-movie-dataset"
-						>https://www.kaggle.com/datasets/carolzhangdc/imdb-5000-movie-dataset</a
-					>
+						href="https://www.kaggle.com/datasets/carolzhangdc/imdb-5000-movie-dataset">https://www.kaggle.com/datasets/carolzhangdc/imdb-5000-movie-dataset</a>
 				</p>
 			</div>
 			<div id="exercicio">
@@ -100,7 +98,7 @@
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
+		<script src="./js/exercicio-3.js"></script>
+		<script src="/main.js"></script>
 	</body>
-	<script src="./js/exercicio-3.js"></script>
-	<script src="/main.js"></script>
 </html>
