--- a/exercicios-javascript/javascript-aula10/exercicio-4.html
+++ b/exercicios-javascript/javascript-aula10/exercicio-4.html
@@ -35,8 +35,7 @@ Show de M&aacute;gica,2024-02-01,20:00
 Parada de Fantasias,2024-02-02,16:00
 Concerto de Rock,2024-02-03,21:00
 Noite de Fogos de Artif&iacute;cio,2024-02-05,22:00
-</pre
-				>
+</pre>
 				<p>
 					Voc&ecirc; deve fazer uma p&aacute;gina web com um &lt;textarea&gt; para o
 					Somir colar a lista que ele tem no formato bruto, e um bot&atilde;o
@@ -47,8 +46,7 @@ Noite de Fogos de Artif&iacute;cio,2024-02-05,22:00
 				<ul>
 					<li> Remover linhas vazias.</li>
 					<li>Ordenar os eventos do mais recente para o mais antigo.</li>
-					<li
-						>Para cada evento segundo essas regras de formata&ccedil;&atilde;o, as
+					<li>Para cada evento segundo essas regras de formata&ccedil;&atilde;o, as
 						colunas da tabela dever&atilde;o ser:
 						<ul>
 							<li>
@@ -91,7 +89,7 @@ Noite de Fogos de Artif&iacute;cio,2024-02-05,22:00
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
+		<script src="./js/exercicio-4.js"></script>
+		<script src="/main.js"></script>
 	</body>
-	<script src="./js/exercicio-4.js"></script>
-	<script src="/main.js"></script>
 </html>
