--- a/exercicios-javascript/javascript-aula11/exercicio-3.html
+++ b/exercicios-javascript/javascript-aula11/exercicio-3.html
@@ -43,8 +43,7 @@ document.querySelector(&quot;button&quot;).addEventListener(&quot;click&quot;, f
 		showSuccess();
 	}
 });
-</pre
-				>
+</pre>
 				<p>
 					Est&aacute; faltando nesse c&oacute;digo a implementa&ccedil;&atilde;o das
 					fun&ccedil;&otilde;es nameIsValid, phoneIsValid, showError e showSucess.
@@ -65,7 +64,7 @@ document.querySelector(&quot;button&quot;).addEventListener(&quot;click&quot;, f
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
+		<script src="./js/exercicio-3.js"></script>
+		<script src="/main.js"></script>
 	</body>
-	<script src="./js/exercicio-3.js"></script>
-	<script src="/main.js"></script>
 </html>
