--- a/exercicios-javascript/javascript-aula14/exercicio-1.html
+++ b/exercicios-javascript/javascript-aula14/exercicio-1.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
 		<link rel="stylesheet" href="/exercicios-javascript/main.css">
 		<title>Dooceria</title>
 	</head>
@@ -14,7 +15,6 @@
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
-	</body>
-	<script src="/main.js"></script>
-	<script type="module" src="index.js"></script>
+		<script src="/main.js"></script>
+		<script type="module" src="index.js"></script>
 </html>
