--- a/exercicios-javascript/javascript-aula3/exercicio-4.html
+++ b/exercicios-javascript/javascript-aula3/exercicio-4.html
@@ -36,10 +36,8 @@
 									</li>
 									<li>
 										segundo a referência:
-										<a
-											href="https://bvsms.saude.gov.br/bvs/dicas/215_obesidade.html"
-											>https://bvsms.saude.gov.br/bvs/dicas/215_obesidade.html</a
-										>
+										<a href="https://bvsms.saude.gov.br/bvs/dicas/215_obesidade.html">
+											https://bvsms.saude.gov.br/bvs/dicas/215_obesidade.html</a>
 									</li>
 								</ul>
 							</li>
@@ -65,7 +63,7 @@
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
+		<script src="./js/exercicio-4.js"></script>
+		<script src="/main.js"></script>
 	</body>
-	<script src="./js/exercicio-4.js"></script>
-	<script src="/main.js"></script>
 </html>
