--- a/exercicios-javascript/javascript-aula4/exercicio-6.html
+++ b/exercicios-javascript/javascript-aula4/exercicio-6.html
@@ -23,10 +23,7 @@
 				</div>
 				<div>
 					Imagem Produto:
-					<input
-						id="imagemProduto"
-						type="text"
-						placeholder="Insira uma URL de Imagem" />
+					<input id="imagemProduto" type="text" placeholder="Insira uma URL de Imagem" />
 				</div>
 				<button id="cadastrarProduto">Cadastrar</button>
 				<div>--------------------------------------------------------</div>
@@ -44,7 +41,7 @@
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
+		<script src="./js/exercicio-6.js"></script>
+		<script src="/main.js"></script>
 	</body>
-	<script src="./js/exercicio-6.js"></script>
-	<script src="/main.js"></script>
 </html>
