--- a/exercicios-javascript/javascript-aula6/exercicio-4 clsr.html
+++ b/exercicios-javascript/javascript-aula6/exercicio-4 clsr.html
@@ -25,8 +25,7 @@
 					diante de maneira c&iacute;clica: se clicar de novo volta para prioridade
 					m&eacute;dia (etc.)
 				</p>
-				<p
-					>Evidentemente, cada tarefa tem sua prioridade independente das outras
+				<p>Evidentemente, cada tarefa tem sua prioridade independente das outras
 					tarefas.
 				</p>
 			</div>
@@ -41,7 +40,7 @@
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
+		<script src="./js/exercicio-4 clsr.js"></script>
+		<script src="/main.js"></script>
 	</body>
-	<script src="./js/exercicio-4 clsr.js"></script>
-	<script src="/main.js"></script>
 </html>
