--- a/exercicios-javascript/javascript-aula7/exercicio-4.html
+++ b/exercicios-javascript/javascript-aula7/exercicio-4.html
@@ -21,10 +21,8 @@
 						O tamanho da fonte do textarea, use &lt;input
 						type=&quot;text&quot;&gt;.
 					</li>
-					<li
-						>A fam&iacute;lia da fonte do textarea, use um &lt;select&gt; com
-						algumas fontes pr&eacute;-definidas.</li
-					>
+					<li>A fam&iacute;lia da fonte do textarea, use um &lt;select&gt; com
+						algumas fontes pr&eacute;-definidas.</li>
 					<li>
 						A cor de fundo do textarea, use um &lt;input
 						type=&quot;color&quot;&gt;.
@@ -76,7 +74,7 @@
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
+		<script src="./js/exercicio-4.js"></script>
+		<script src="/main.js"></script>
 	</body>
-	<script src="./js/exercicio-4.js"></script>
-	<script src="/main.js"></script>
 </html>
