--- a/exercicios-javascript/javascript-aula7/exercicio-5.html
+++ b/exercicios-javascript/javascript-aula7/exercicio-5.html
@@ -33,14 +33,13 @@
 					as seguintes propriedades:
 				</p>
 				<pre>
-		{ 
-			text:	..., // texto do textarea 
+		{
+			text:	..., // texto do textarea
 			backgroundColor: ..., // cor do plano de fundo
-			fontFamily: ..., // fam&iacute;lia da fonte 
-			fontSize: ... // tamanho da	fonte 
-		} 
-		</pre
-				>
+			fontFamily: ..., // fam&iacute;lia da fonte
+			fontSize: ... // tamanho da	fonte
+		}
+		</pre>
 				<p>
 					Da&iacute; o usu&aacute;rio pode selecionar com o mouse e copiar (Ctrl-C)
 					esse texto, que &eacute; o que ser&aacute; importado em outro navegador. O
@@ -124,7 +123,7 @@
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
+		<script src="./js/exercicio-5.js"></script>
+		<script src="/main.js"></script>
 	</body>
-	<script src="./js/exercicio-5.js"></script>
-	<script src="/main.js"></script>
 </html>
