--- a/exercicios-javascript/javascript-aula7/exercicio-6.html
+++ b/exercicios-javascript/javascript-aula7/exercicio-6.html
@@ -15,10 +15,8 @@
 				</p>
 				<ul>
 					<li>Um &lt;input type=&quot;text&quot;&gt; para digitar um lembrete</li>
-					<li
-						>Um &lt;input type=&quot;date&quot;&gt; para selecionar a data do
-						lembrete</li
-					>
+					<li>Um &lt;input type=&quot;date&quot;&gt; para selecionar a data do
+						lembrete</li>
 					<li>Um bot&atilde;o &ldquo;Adicionar&rdquo;</li>
 					<li>Um bot&atilde;o &ldquo;Mostrar lembretes de hoje&rdquo;</li>
 				</ul>
@@ -63,7 +61,7 @@
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
+		<script src="./js/exercicio-6.js"></script>
+		<script src="/main.js"></script>
 	</body>
-	<script src="./js/exercicio-6.js"></script>
-	<script src="/main.js"></script>
 </html>
