--- a/exercicios-javascript/javascript-aula9/exercicio-4.html
+++ b/exercicios-javascript/javascript-aula9/exercicio-4.html
@@ -5,8 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
 		<link rel="stylesheet" href="./css/exercicio-4.css" />
-		<link
-			rel="stylesheet"
+		<link rel="stylesheet"
 			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
 		<title>Exercício 4</title>
@@ -118,7 +117,7 @@
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
+		<script src="./js/exercicio-4.js"></script>
+		<script src="/main.js"></script>
 	</body>
-	<script src="./js/exercicio-4.js"></script>
-	<script src="/main.js"></script>
 </html>
