--- a/exercicios-javascript/javascript-aula10/exercicio-5.html
+++ b/exercicios-javascript/javascript-aula10/exercicio-5.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link
-			rel="stylesheet"
+		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<link rel="stylesheet"
 			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
 		<link rel="stylesheet" href="./css/exercicio-5.css" />
@@ -98,7 +98,7 @@
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
+		<script src="./js/exercicio-5.js"></script>
+		<script src="/main.js"></script>
 	</body>
-	<script src="./js/exercicio-5.js"></script>
-	<script src="/main.js"></script>
 </html>
