--- a/exercicios-javascript/javascript-aula2/exercicio-8.html
+++ b/exercicios-javascript/javascript-aula2/exercicio-8.html
@@ -4,8 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
-		<link
-			rel="stylesheet"
+		<link rel="stylesheet"
 			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 		<link rel="stylesheet" href="./css/exercicio-8.css" />
 		<title>Exercicio 8</title>
@@ -26,9 +25,7 @@
 				<div id="containerModal">
 					<div id="modalEbook">
 						<div>
-							<span id="botaoFecha" class="material-symbols-outlined"
-								>close</span
-							>
+							<span id="botaoFecha" class="material-symbols-outlined">close</span>
 						</div>
 						<h1>Preencha seus dados para receber o E-Book Gratuito!</h1>
 						<div id="formulario">
@@ -57,7 +54,7 @@
 				<a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
+		<script src="./js/exercicio-8.js"></script>
+		<script src="/main.js"></script>
 	</body>
-	<script src="./js/exercicio-8.js"></script>
-	<script src="/main.js"></script>
 </html>
