--- a/exercicios-javascript/javascript-aula4/index.html
+++ b/exercicios-javascript/javascript-aula4/index.html
@@ -8,21 +8,13 @@
 	</head>
 	<body>
 		<main id="content">
-			Segue abaixo a lista de Exercicios práticos da Aula 4 de JavaScript:
+			Segue abaixo a lista de Exercicios práticos da Aula 4de JavaScript:
 			<nav>
 				<ul>
 					<li><a href="./exercicio-5.html" class="link">Exercício 5</a></li>
 					<li><a href="./exercicio-6.html" class="link">Exercício 6</a></li>
-					<li
-						><a href="./exercicio-9-obj.html" class="link"
-							>Exercício 9 Objetos</a
-						></li
-					>
-					<li
-						><a href="./exercicio-9-swt.html" class="link"
-							>Exercício 9 Switch</a
-						></li
-					>
+					<li><a href="./exercicio-9-obj.html" class="link">Exercício 9 Objetos</a></li>
+					<li><a href="./exercicio-9-swt.html" class="link">Exercício 9 Switch</a></li>
 					<li><a href="./exercicio-10.html" class="link">Exercício 10</a></li>
 				</ul>
 			</nav>
@@ -31,6 +23,6 @@
 				Ir para minha <a href="/index.html" class="link">Home</a>
 			</nav>
 		</main>
+		<script src="/main.js"></script>
 	</body>
-	<script src="/main.js"></script>
 </html>
