--- a/exercicios-javascript/javascript-aula5/exercicio-3.html
+++ b/exercicios-javascript/javascript-aula5/exercicio-3.html
@@ -16,12 +16,7 @@
 				lado direito ao vivo (a cada tecla digitada, o lado direito atualiza):
 			</div>
 			<div id="exercicio">
-				<textarea
-					name="divPrincipal"
-					id="divCopiada"
-					cols="35"
-					rows="10"
-					placeholder="Digite o texto Aqui!"></textarea>
+				<textarea name="divPrincipal" id="divCopiada" cols="35" rows="10" placeholder="Digite o texto Aqui!"></textarea>
 				<div id="divCopia"></div>
 			</div>
 			<nav id="linkNav">
@@ -29,7 +24,7 @@
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
+		<script src="./js/exercicio-3.js"></script>
+		<script src="/main.js"></script>
 	</body>
-	<script src="./js/exercicio-3.js"></script>
-	<script src="/main.js"></script>
 </html>
