--- a/exercicios-javascript/javascript-aula6/index.html
+++ b/exercicios-javascript/javascript-aula6/index.html
@@ -8,19 +8,21 @@
 	</head>
 	<body>
 		<main id="content">
-			Segue abaixo a lista de Exercicios práticos da Aula 6 de JavaScript:
-			<ul>
-				<li><a href="./exercicio-1.html" class="link">Exercício 1</a></li>
-				<li><a href="./exercicio-3.html" class="link">Exercício 3</a></li>
-				<li><a href="./exercicio-4 clsr.html" class="link">Exercício 4 Closure</a></li>
-				<li><a href="./exercicio-4 ds.html" class="link">Exercício 4 Dataset</a></li>
-				<li><a href="./exercicio-5.html" class="link">Exercício 5</a></li>
-			</ul>
+			Segue abaixo a lista de Exercicios práticos da Aula 6de JavaScript:
+			<nav>
+				<ul>
+					<li><a href="./exercicio-1.html" class="link">Exercício 1</a></li>
+					<li><a href="./exercicio-3.html" class="link">Exercício 3</a></li>
+					<li><a href="./exercicio-4 clsr.html" class="link">Exercício 4 Closure</a></li>
+					<li><a href="./exercicio-4 ds.html" class="link">Exercício 4 Dataset</a></li>
+					<li><a href="./exercicio-5.html" class="link">Exercício 5</a></li>
+				</ul>
+			</nav>
 			<nav id="linkNav">
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a><br />
 				Ir para minha <a href="/index.html" class="link">Home</a>
 			</nav>
 		</main>
+		<script src="/main.js"></script>
 	</body>
-	<script src="/main.js"></script>
 </html>
