--- a/exercicios-javascript/javascript-aula7/index.html
+++ b/exercicios-javascript/javascript-aula7/index.html
@@ -9,17 +9,19 @@
 	<body>
 		<main id="content">
 			Segue abaixo a lista de Exercicios práticos da Aula 7 de JavaScript:
-			<ul>
-				<li><a href="./exercicio-3.html" class="link">Exercício 3</a></li>
-				<li><a href="./exercicio-4.html" class="link">Exercício 4</a></li>
-				<li><a href="./exercicio-5.html" class="link">Exercício 5</a></li>
-				<li><a href="./exercicio-6.html" class="link">Exercício 6</a></li>
-			</ul>
+			<nav>
+				<ul>
+					<li><a href="./exercicio-3.html" class="link">Exercício 3</a></li>
+					<li><a href="./exercicio-4.html" class="link">Exercício 4</a></li>
+					<li><a href="./exercicio-5.html" class="link">Exercício 5</a></li>
+					<li><a href="./exercicio-6.html" class="link">Exercício 6</a></li>
+				</ul>
+			</nav>
 			<nav id="linkNav">
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a><br />
 				Ir para minha <a href="/index.html" class="link">Home</a>
 			</nav>
 		</main>
+		<script src="/main.js"></script>
 	</body>
-	<script src="/main.js"></script>
 </html>
