--- a/projetolandingpage/html/privacidade.html
+++ b/projetolandingpage/html/privacidade.html
@@ -3,12 +3,11 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
 		<title>Futuro Hoje!</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Afacad&family=Mitr:wght@500&display=swap"
-			rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=Afacad&family=Mitr:wght@500&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="/css/style.css" />
 		<link rel="icon" href="futurohojefav.png" type="image/x-icon" />
 		<meta name="description" content="Rede financeira de investimentos capitais." />
@@ -29,6 +28,5 @@
 				nobis quae sunt dolorem, illum omnis impedit veritatis!
 			</p>
 		</main>
-	</body>
-	<footer><a href="/index.html" class="link">Retornar</a></footer>
+		<footer><a href="/index.html" class="link">Retornar</a></footer>
 </html>
