--- a/projetolandingpage/index.html
+++ b/projetolandingpage/index.html
@@ -3,16 +3,14 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link rel="stylesheet" href="css/style.css" />
-		<link
-			rel="stylesheet"
+		<link rel="stylesheet"
 			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 		<link rel="icon" href="./img/futurohojefav.png" type="image/x-icon" />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Afacad&family=Mitr:wght@500&display=swap"
-			rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=Afacad&family=Mitr:wght@500&display=swap" rel="stylesheet" />
 
 		<!-- HTML Meta Tags -->
 		<title>Futuro Hoje</title>
@@ -23,20 +21,16 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Futuro Hoje" />
 		<meta property="og:description" content="Rede de investimentos financeiros" />
-		<meta
-			property="og:image"
+		<meta property="og:image"
 			content="https://raw.githubusercontent.com/gaidenblk/gaidenblk.github.io/main/projetolandingpage/futurohoje.png" />
 
 		<!-- Twitter Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta property="twitter:domain" content="gaidenblk.github.io" />
-		<meta
-			property="twitter:url"
-			content="https://gaidenblk.github.io/projetolandingpage/" />
+		<meta property="twitter:url" content="https://gaidenblk.github.io/projetolandingpage/" />
 		<meta name="twitter:title" content="Futuro Hoje" />
 		<meta name="twitter:description" content="Rede de investimentos financeiros" />
-		<meta
-			name="twitter:image"
+		<meta name="twitter:image"
 			content="https://raw.githubusercontent.com/gaidenblk/gaidenblk.github.io/main/projetolandingpage/futurohoje.png" />
 
 		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
@@ -45,25 +39,14 @@
 	<body>
 		<main id="content">
 			<header>
-				<a
-					id="voltarParaHome"
-					class="material-symbols-outlined link"
-					href="/index.html"
-					>house</a
-				>
-				<button
-					id="buttonMode"
-					class="material-symbols-outlined"
-					onclick="toggleDarkMode()">
+				<a id="voltarParaHome" class="material-symbols-outlined link" href="/index.html">house</a>
+				<button id="buttonMode" class="material-symbols-outlined" onclick="toggleDarkMode()">
 					dark_mode
 				</button>
 				<div id="topo">
 					<div>
 						<canvas id="meuCanvas" width="130" height="125"></canvas>
-						<img
-							id="futuroicone"
-							src="img/futurohoje.png"
-							alt="Futuro Hoje Logo" />
+						<img id="futuroicone" src="img/futurohoje.png" alt="Futuro Hoje Logo" />
 					</div>
 					<h1>FUTURO <br />HOJE</h1>
 				</div>
@@ -114,10 +97,8 @@
 				</div>
 				<div id="botao" class="linha">
 					<p>
-						Ao Clicar em "Criar Conta" <br />você concorda com nossos<br /><a
-							href="html/termos.html"
-							>termos de serviços</a
-						>
+						Ao Clicar em "Criar Conta" <br />você concorda com nossos<br /><a href="html/termos.html">termos de
+							serviços</a>
 						e <br /><a href="html/privacidade.html">política de privacidade</a>
 					</p>
 					<input type="submit" value="Criar conta" />
@@ -153,7 +134,7 @@
 				reservados
 			</footer>
 		</main>
+		<script src="./script.js"></script>
+		<script src="/main.js"></script>
 	</body>
-	<script src="./script.js"></script>
-	<script src="/main.js"></script>
 </html>
