Pequenos ajustes no CSS e logica de navegacao

--- a/exercicios-javascript/javascript-aula10/exercicio-2.html
+++ b/exercicios-javascript/javascript-aula10/exercicio-2.html
@@ -50,7 +50,7 @@
 				<span id="erro"></span>
 			</div>
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
