--- a/exercicios-javascript/javascript-aula10/exercicio-4.html
+++ b/exercicios-javascript/javascript-aula10/exercicio-4.html
@@ -85,7 +85,7 @@ Noite de Fogos de Artif&iacute;cio,2024-02-05,22:00
 				</table>
 			</div>
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
