--- a/exercicios-javascript/javascript-aula3/exercicio-9.html
+++ b/exercicios-javascript/javascript-aula3/exercicio-9.html
@@ -29,7 +29,7 @@
 				<p id="resultado">Número sorteado:</p>
 			</div>
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
