--- a/exercicios-javascript/javascript-aula1/exercicio-i18n.html
+++ b/exercicios-javascript/javascript-aula1/exercicio-i18n.html
@@ -23,9 +23,8 @@
 			</div>
 			<button onclick="iniciar()">Iniciar!</button><br />
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a> <br />
-				Voltar para o
-				<a href="/exercicios-javascript/" class="link">Inicio</a>
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
+				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
 		<script src="./js/exercicio-1.js"></script>
