--- a/exercicios-javascript/javascript-aula1/exercicio-nome.html
+++ b/exercicios-javascript/javascript-aula1/exercicio-nome.html
@@ -18,8 +18,7 @@
 			<button onclick="iniciar()">Iniciar</button><br />
 			<nav id="linkNav">
 				Voltar para a <a href="./index.html" class="link">Lista</a> <br />
-				Voltar para o
-				<a href="/exercicios-javascript/" class="link">Inicio</a>
+				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
 		<script src="./js/exercicio-2.js"></script>
