--- a/exercicios-javascript/javascript-aula10/exercicio-1.html
+++ b/exercicios-javascript/javascript-aula10/exercicio-1.html
@@ -48,7 +48,7 @@ for (let i = 0; i &lt; filiais.length; i++) {
 				</p>
 			</div>
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
