--- a/exercicios-javascript/javascript-aula11/exercicio-3.html
+++ b/exercicios-javascript/javascript-aula11/exercicio-3.html
@@ -60,7 +60,7 @@ document.querySelector(&quot;button&quot;).addEventListener(&quot;click&quot;, f
 				<button>Verificar</button>
 			</div>
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
