--- a/exercicios-javascript/javascript-aula11/exercicio-4.html
+++ b/exercicios-javascript/javascript-aula11/exercicio-4.html
@@ -45,7 +45,7 @@
 				<p id="container"></p>
 			</div>
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
