--- a/exercicios-javascript/javascript-aula13/exercicio-2.html
+++ b/exercicios-javascript/javascript-aula13/exercicio-2.html
@@ -36,7 +36,7 @@
 				<p id="containerTempo"></p>
 			</div>
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
