--- a/exercicios-javascript/javascript-aula15/exercicio-1.html
+++ b/exercicios-javascript/javascript-aula15/exercicio-1.html
@@ -21,7 +21,7 @@
 				<iframe id="mapa" src="" frameborder="0" width="600" height="450"></iframe>
 			</div>
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
