--- a/exercicios-javascript/javascript-aula2/exercicio-1.html
+++ b/exercicios-javascript/javascript-aula2/exercicio-1.html
@@ -14,9 +14,8 @@
 			</div>
 			<button id="executa">executa</button><br />
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a><br />
-				Voltar para o
-				<a href="/exercicios-javascript/" class="link">Inicio</a>
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
+				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
 		<script src="./js/exercicio-1.js"></script>
