--- a/exercicios-javascript/javascript-aula2/exercicio-10.html
+++ b/exercicios-javascript/javascript-aula2/exercicio-10.html
@@ -19,9 +19,8 @@
 				<ul id="listaTarefas"></ul>
 			</div>
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link"> Lista</a> <br />
-				Voltar para o
-				<a href="/exercicios-javascript/" class="link">Inicio</a>
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
+				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
 		<script src="./js/exercicio-10.js"></script>
