--- a/exercicios-javascript/javascript-aula2/exercicio-2.html
+++ b/exercicios-javascript/javascript-aula2/exercicio-2.html
@@ -15,9 +15,8 @@
 			</div>
 			<p id="paragrafo">Clique em Mim</p>
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a><br />
-				Voltar para o
-				<a href="/exercicios-javascript/" class="link">Inicio</a>
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
+				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
 		<script src="./js/exercicio-2.js"></script>
