--- a/exercicios-javascript/javascript-aula2/exercicio-4.html
+++ b/exercicios-javascript/javascript-aula2/exercicio-4.html
@@ -18,9 +18,8 @@
 				<button>botao</button><br />
 			</div>
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a><br />
-				Voltar para o
-				<a href="/exercicios-javascript/" class="link">Inicio</a>
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
+				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
 		<script src="./js/exercicio-4.js"></script>
