--- a/exercicios-javascript/javascript-aula2/exercicio-6.html
+++ b/exercicios-javascript/javascript-aula2/exercicio-6.html
@@ -44,9 +44,8 @@
 				</div>
 			</div>
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a><br />
-				Voltar para o
-				<a href="/exercicios-javascript/" class="link">Inicio</a>
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
+				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
 		<script src="./js/exercicio-6.js"></script>
