--- a/exercicios-javascript/javascript-aula3/exercicio-3.html
+++ b/exercicios-javascript/javascript-aula3/exercicio-3.html
@@ -28,7 +28,7 @@
 			</div>
 			<p id="paragrafo">Clique em Mim</p>
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
