--- a/exercicios-javascript/javascript-aula3/exercicio-8.html
+++ b/exercicios-javascript/javascript-aula3/exercicio-8.html
@@ -24,7 +24,7 @@
 				<div id="desativaAlarme">Desativar o Alarme</div>
 			</div>
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
