--- a/exercicios-javascript/javascript-aula4/exercicio-5.html
+++ b/exercicios-javascript/javascript-aula4/exercicio-5.html
@@ -41,7 +41,7 @@
 				<br />
 			</div>
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
