--- a/exercicios-javascript/javascript-aula5/exercicio-5.html
+++ b/exercicios-javascript/javascript-aula5/exercicio-5.html
@@ -24,7 +24,7 @@
 				<input id="input2" class="inputTexto" type="text" />
 			</div>
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
