--- a/exercicios-javascript/javascript-aula6/exercicio-3.html
+++ b/exercicios-javascript/javascript-aula6/exercicio-3.html
@@ -22,7 +22,7 @@
 				<ul></ul>
 			</div>
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
