--- a/exercicios-javascript/javascript-aula7/exercicio-3.html
+++ b/exercicios-javascript/javascript-aula7/exercicio-3.html
@@ -20,7 +20,7 @@
 				<textarea name="" id="" cols="30" rows="10"></textarea>
 			</div>
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
