--- a/exercicios-javascript/javascript-aula8/exercicio-1.html
+++ b/exercicios-javascript/javascript-aula8/exercicio-1.html
@@ -42,7 +42,7 @@
 				<button id="pop">Pop</button>
 			</div>
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
