--- a/exercicios-javascript/javascript-aula8/exercicio-2.html
+++ b/exercicios-javascript/javascript-aula8/exercicio-2.html
@@ -44,7 +44,7 @@
 				<img id="img-display" style="max-width: 300px" />
 			</div>
 			<nav id="linkNav">
-				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
 				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
