Pequenos ajustes nos CSS e codigo JS

--- a/exercicios-javascript/javascript-aula11/exercicio-3.html
+++ b/exercicios-javascript/javascript-aula11/exercicio-3.html
@@ -57,7 +57,7 @@ document.querySelector(&quot;button&quot;).addEventListener(&quot;click&quot;, f
 			<div id="exercicio">
 				<input type="text" id="name-input" />
 				<input type="text" id="telephone-input" />
-				<button>Verificar</button>
+				<button id="btnVerificar">Verificar</button>
 			</div>
 			<nav id="linkNav">
 				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
