--- a/exercicios-javascript/javascript-aula17/exercicio-3.html
+++ b/exercicios-javascript/javascript-aula17/exercicio-3.html
@@ -65,9 +65,11 @@
 					</li>
 				</ul>
 				<p>
-					Para acessar esse exercício utilize o console do navegador, já temos players instanciados, basta digitar
-					player2 seguido de . e selecionar seus atributos, aqui temos também o playerCowboy e playerMage já
-					instanciados
+					Para acessar esse exercício utilize o console do navegador, já temos players instanciados!
+				</p>
+				<p>
+					Aqui temos o playerCowboy e playerMage já instanciados basta digitar playerCowboy ou playerMage seguido de . e
+					selecionar seus atributos!
 				</p>
 			</div>
 			<nav id="linkNav">
