--- a/exercicios-javascript/javascript-aula3/exercicio-10.html
+++ b/exercicios-javascript/javascript-aula3/exercicio-10.html
@@ -12,7 +12,7 @@
 			<div id="explicacao">
 				O objetivo desse exercício é validar um número<br />
 				de telefone que segue este formato: <br />
-				(XX) XXXX-XXXX ou (XX) - XXXXX-XXXX
+				(XX) XXXX-XXXX ou (XX) XXXXX-XXXX
 			</div>
 			<div id="exercicio">
 				<input id="telefone" type="text" />
