--- a/exercicios-javascript/javascript-aula6/exercicio-3.html
+++ b/exercicios-javascript/javascript-aula6/exercicio-3.html
@@ -18,8 +18,8 @@
 				</p>
 			</div>
 			<div id="exercicio">
-				<button>botão</button>
-				<ul></ul>
+				<button id="btnBotao">botão</button>
+				<ul id="ulContent"></ul>
 			</div>
 			<nav id="linkNav">
 				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
