Implementacao do header

--- a/exercicios-javascript/index.html
+++ b/exercicios-javascript/index.html
@@ -3,14 +3,20 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<link rel="stylesheet" href="/main.css" />
 		<title>Lista de Exercicios JavaScript</title>
 	</head>
 	<body>
 		<main id="content">
-			Segue a lista de Exercícios de JavaScript <br />
-
-			Voltar para a <a href="/index.html" class="link">Home</a><br />
+			<p>
+				Ao lado você encontra a lista de todas as aulas de JavaScript, cada uma com sua série de exercícios!
+			</p>
+			<p>
+				Aqui, no caso, eu separei apenas as aulas práticas com os exercícios já resovidos e interativos
+			</p>
+			<nav id="linkNav">
+				Voltar para a <a href="/index.html" class="link">Home</a><br />
+			</nav>
 		</main>
 		<script src="/main.js"></script>
 	</body>
