--- a/exercicios-javascript/javascript-aula1/index.html
+++ b/exercicios-javascript/javascript-aula1/index.html
@@ -3,14 +3,13 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<link rel="stylesheet" href="/main.css" />
 		<title>Exercicios Aula 1 JavaScript</title>
 	</head>
 	<body>
 		<main id="content">
-			Aula 01 - Tipos de Dados, Expressões e Variáveis
-			<br />
-			Segue abaixo a lista de Exercicios práticos da Aula 1de JavaScript:
+			<h2>Aula 01 - Tipos de Dados, Expressões e Variáveis</h2>
+			Segue abaixo a lista de Exercicios práticos da Aula 1 de JavaScript:
 			<nav>
 				<ul>
 					<li><a href="./exercicio-i18n.html" class="link">Exercício 1</a></li>
