--- a/exercicios-javascript/javascript-aula15/index.html
+++ b/exercicios-javascript/javascript-aula15/index.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<link rel="stylesheet" href="/main.css" />
 		<title>Exercícios Aula 15 JavaScript</title>
 	</head>
 	<body>
 		<main id="content">
+			<h2>Aula 15 - Requisições Web</h2>
 			<div id="explicacao">
-
 				<p>
 					Nessa aula aprendemos a fazer requisições web, aqui vamos criar uma página web para consulta de CEP e
 					localidade de forma que:
