--- a/exercicios-javascript/javascript-aula3/index.html
+++ b/exercicios-javascript/javascript-aula3/index.html
@@ -3,12 +3,13 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<link rel="stylesheet" href="/main.css" />
 		<title>Exercícios Aula 3 JavaScript</title>
 	</head>
 	<body>
 		<main id="content">
-			Segue abaixo a lista de Exercicios práticos da Aula 3de JavaScript:
+			<h2>Aula 03 - Comando if-else e biblioteca Math</h2>
+			Segue abaixo a lista de Exercicios práticos da Aula 3 de JavaScript:
 			<nav>
 				<ul>
 					<li><a href="./exercicio-3.html" class="link">Exercício 3</a></li>
