--- a/exercicios-javascript/javascript-aula7/index.html
+++ b/exercicios-javascript/javascript-aula7/index.html
@@ -3,11 +3,12 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<link rel="stylesheet" href="/main.css" />
 		<title>Exercícios Aula 7 JavaScript</title>
 	</head>
 	<body>
 		<main id="content">
+			<h2>Aula 07 - Local Storage, JSON e try-catch</h2>
 			Segue abaixo a lista de Exercicios práticos da Aula 7 de JavaScript:
 			<nav>
 				<ul>
