--- a/exercicios-javascript/javascript-aula11/index.html
+++ b/exercicios-javascript/javascript-aula11/index.html
@@ -3,12 +3,13 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<link rel="stylesheet" href="/main.css" />
 		<title>Exercícios Aula 11 JavaScript</title>
 	</head>
 	<body>
 		<main id="content">
-			Segue abaixo a lista de Exercicios práticos da Aula 11de JavaScript:
+			<h2>Aula 11 - Subprogramação</h2>
+			Segue abaixo a lista de Exercicios práticos da Aula 11 de JavaScript:
 			<nav>
 				<ul>
 					<li><a href="./exercicio-2.html" class="link">Exercício 2</a></li>
