--- a/exercicios-javascript/javascript-aula12/index.html
+++ b/exercicios-javascript/javascript-aula12/index.html
@@ -3,12 +3,13 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<link rel="stylesheet" href="/main.css" />
 		<title>Exercícios Aula 12 JavaScript</title>
 	</head>
 	<body>
 		<main id="content">
 			<div id="explicacao">
+				<h2>Aula 12 - Usando Módulos</h2>
 				<p> Essa aula consiste em aprender a utilizar módulos! </p>
 				<p>
 					Para isso será criado uma página em html toda feita em JavaScript sendo que
