--- a/exercicios-javascript/javascript-aula14/index.html
+++ b/exercicios-javascript/javascript-aula14/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/exercicios-javascript/main.css" />
+    <link rel="stylesheet" href="/main.css" />
     <title>Exercícios Aula 14 JavaScript</title>
   </head>
   <body>
     <main id="content">
       <div id="explicacao">
+        <h2>Aula 14 - Single Page Application</h2>
         <p> Essa aula consiste em aprender a criar uma SPA! </p>
         <p>
           Esse exercício é apenas uma demostração de como uma SPA funciona, apenas a próxima pagina será carregada, e as
