--- a/exercicios-javascript/javascript-aula2/exercicio-9.html
+++ b/exercicios-javascript/javascript-aula2/exercicio-9.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<link rel="stylesheet" href="/main.css" />
 		<link rel="stylesheet" href="./css/exercicio-9.css" />
 		<title>Exercicio 9</title>
 	</head>
