--- a/exercicios-javascript/javascript-aula2/index.html
+++ b/exercicios-javascript/javascript-aula2/index.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<link rel="stylesheet" href="/main.css" />
 		<title>Exercicios Aula 2 JavaScript</title>
 	</head>
 	<body>
 		<main id="content">
-			Aula 02 - Fundamentos de objetos e DOM <br />
-			Segue abaixo a lista de Exercicios práticos da Aula 2de JavaScript:
+			<h2>Aula 02 - Fundamentos de objetos e DOM</h2>
+			Segue abaixo a lista de Exercicios práticos da Aula 2 de JavaScript:
 			<nav>
 				<ul>
 					<li><a href="./exercicio-1.html" class="link">Exercício 1</a></li>
