Pequenos ajustes no header e inclusao das outras paginas

--- a/html/header.html
+++ b/html/header.html
@@ -1,17 +1,15 @@
-<header>
-  <div class="logo">
-    <a href="/">
-      <img src="logo.png" alt="Logo do site">
+<header class="header">
+  <div class="logo clickable">
+    <a href="/" class="link">
+      gaidenblk
     </a>
   </div>
-
   <nav>
-    <ul class="menu">
-      <li><a href="#home">Início</a></li>
-      <li><a href="#about">Sobre</a></li>
-      <li><a href="#services">Serviços</a></li>
-      <li><a href="#contact">Contato</a></li>
+    <ul class="menu customUl">
+      <li class="clickable"><a href="/estudos.html" class="link">Estudos</a></li>
+      <li class="clickable"><a href="/sobre.html" class="link">Sobre Mim</a></li>
+      <li class="clickable"><a href="/pixelarts.html" class="link">Pixel Arts</a></li>
+      <li class="clickable"><a href="/contato.html" class="link">Contato</a></li>
     </ul>
   </nav>
-
 </header>
