--- a/html/sideNavbar.html
+++ b/html/sideNavbar.html
@@ -1,140 +1,140 @@
 <button id="sideNavBtn">&lt;</button>
 <nav id="sideNavbar">
-  <ul>
-    <li>
-      <a href="/exercicios-javascript/javascript-aula1/index.html" class="link sideNav">
-        <span>Aula 1</span>
-        <span>
+  <ul class="customUl">
+    <li class="clickable">
+      <a href="/exercicios-javascript/javascript-aula1/index.html" class="link">
+        <strong>Aula 1</strong>
+        <small>
           Tipos de Dados, Expressões e Variáveis
-        </span>
+        </small>
       </a>
     </li>
-    <li>
-      <a href="/exercicios-javascript/javascript-aula2/index.html" class="link sideNav">
-        <span>Aula 2</span>
-        <span>
+    <li class="clickable">
+      <a href="/exercicios-javascript/javascript-aula2/index.html" class="link">
+        <strong>Aula 2</strong>
+        <small>
           Fundamentos de objetos e DOM
-        </span>
+        </small>
       </a>
     </li>
-    <li>
-      <a href="/exercicios-javascript/javascript-aula3/index.html" class="link sideNav">
-        <span>Aula 3</span>
-        <span>
+    <li class="clickable">
+      <a href="/exercicios-javascript/javascript-aula3/index.html" class="link">
+        <strong>Aula 3</strong>
+        <small>
           Comando if-else e biblioteca Math
-        </span>
+        </small>
       </a>
     </li>
-    <li>
-      <a href="/exercicios-javascript/javascript-aula4/index.html" class="link sideNav">
-        <span>Aula 4</span>
-        <span>
+    <li class="clickable">
+      <a href="/exercicios-javascript/javascript-aula4/index.html" class="link">
+        <strong>Aula 4</strong>
+        <small>
           Comando switch, mapeamento e Date
-        </span>
+        </small>
       </a>
     </li>
-    <li>
-      <a href="/exercicios-javascript/javascript-aula5/index.html" class="link sideNav">
-        <span>Aula 5</span>
-        <span>
+    <li class="clickable">
+      <a href="/exercicios-javascript/javascript-aula5/index.html" class="link">
+        <strong>Aula 5</strong>
+        <small>
           Manipulação avançada de eventos
-        </span>
+        </small>
       </a>
     </li>
-    <li>
-      <a href="/exercicios-javascript/javascript-aula6/index.html" class="link sideNav">
-        <span>Aula 6</span>
-        <span>
+    <li class="clickable">
+      <a href="/exercicios-javascript/javascript-aula6/index.html" class="link">
+        <strong>Aula 6</strong>
+        <small>
           DOM avançado, closure e dataset
-        </span>
+        </small>
       </a>
     </li>
-    <li>
-      <a href="/exercicios-javascript/javascript-aula7/index.html" class="link sideNav">
-        <span>Aula 7</span>
-        <span>
+    <li class="clickable">
+      <a href="/exercicios-javascript/javascript-aula7/index.html" class="link">
+        <strong>Aula 7</strong>
+        <small>
           Local Storage, JSON e try-catch
-        </span>
+        </small>
       </a>
     </li>
-    <li>
-      <a href="/exercicios-javascript/javascript-aula8/index.html" class="link sideNav">
-        <span>Aula 8</span>
-        <span>
+    <li class="clickable">
+      <a href="/exercicios-javascript/javascript-aula8/index.html" class="link">
+        <strong>Aula 8</strong>
+        <small>
           Introdução a arrays, comando for-of e querySelectorAll
-        </span>
+        </small>
       </a>
     </li>
-    <li>
-      <a href="/exercicios-javascript/javascript-aula9/index.html" class="link sideNav">
-        <span>Aula 9</span>
-        <span>
+    <li class="clickable">
+      <a href="/exercicios-javascript/javascript-aula9/index.html" class="link">
+        <strong>Aula 9</strong>
+        <small>
           Outros comandos e táticas com loop
-        </span>
+        </small>
       </a>
     </li>
-    <li>
-      <a href="/exercicios-javascript/javascript-aula10/index.html" class="link sideNav">
-        <span>Aula 10</span>
-        <span>
+    <li class="clickable">
+      <a href="/exercicios-javascript/javascript-aula10/index.html" class="link">
+        <strong>Aula 10</strong>
+        <small>
           Métodos funcionais de array
-        </span>
+        </small>
       </a>
     </li>
-    <li>
-      <a href="/exercicios-javascript/javascript-aula11/index.html" class="link sideNav">
-        <span>Aula 11</span>
-        <span>
+    <li class="clickable">
+      <a href="/exercicios-javascript/javascript-aula11/index.html" class="link">
+        <strong>Aula 11</strong>
+        <small>
           Subprogramação
-        </span>
+        </small>
       </a>
     </li>
-    <li>
-      <a href="/exercicios-javascript/javascript-aula12/index.html" class="link sideNav">
-        <span>Aula 12</span>
-        <span>
+    <li class="clickable">
+      <a href="/exercicios-javascript/javascript-aula12/index.html" class="link">
+        <strong>Aula 12</strong>
+        <small>
           Usando Módulos
-        </span>
+        </small>
       </a>
     </li>
-    <li>
-      <a href="/exercicios-javascript/javascript-aula13/index.html" class="link sideNav">
-        <span>Aula 13</span>
-        <span>
+    <li class="clickable">
+      <a href="/exercicios-javascript/javascript-aula13/index.html" class="link">
+        <strong>Aula 13</strong>
+        <small>
           Controle de tempo e áudio
-        </span>
+        </small>
       </a>
     </li>
-    <li>
-      <a href="/exercicios-javascript/javascript-aula14/index.html" class="link sideNav">
-        <span>Aula 14</span>
-        <span>
+    <li class="clickable">
+      <a href="/exercicios-javascript/javascript-aula14/index.html" class="link">
+        <strong>Aula 14</strong>
+        <small>
           Single Page Application
-        </span>
+        </small>
       </a>
     </li>
-    <li>
-      <a href="/exercicios-javascript/javascript-aula15/index.html" class="link sideNav">
-        <span>Aula 15</span>
-        <span>
+    <li class="clickable">
+      <a href="/exercicios-javascript/javascript-aula15/index.html" class="link">
+        <strong>Aula 15</strong>
+        <small>
           Requisições Web
-        </span>
+        </small>
       </a>
     </li>
-    <li>
-      <a href="/exercicios-javascript/javascript-aula16/index.html" class="link sideNav">
-        <span>Aula 16</span>
-        <span>
+    <li class="clickable">
+      <a href="/exercicios-javascript/javascript-aula16/index.html" class="link">
+        <strong>Aula 16</strong>
+        <small>
           Promise e async-await
-        </span>
+        </small>
       </a>
     </li>
-    <li>
-      <a href="/exercicios-javascript/javascript-aula17/index.html" class="link sideNav">
-        <span>Aula 17</span>
-        <span>
+    <li class="clickable">
+      <a href="/exercicios-javascript/javascript-aula17/index.html" class="link">
+        <strong>Aula 17</strong>
+        <small>
           Class
-        </span>
+        </small>
       </a>
     </li>
   </ul>
